Closed Bug 1414213 Opened 7 years ago Closed 7 years ago

WARNING: Failed to read data: file media/libstagefright/binding/include/mp4_demuxer/BufferReader.h, line 60

Categories

(Core :: Audio/Video: Playback, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox-esr52 --- unaffected
firefox56 --- unaffected
firefox57 --- unaffected
firefox58 --- fixed

People

(Reporter: jwwang, Assigned: jwwang)

References

Details

(Keywords: regression)

Attachments

(2 files)

Got tons of warnings while playing http://92.90.207.41/.
Assignee: nobody → jwwang
Priority: -- → P5
Attachment #8924894 - Flags: review?(jyavenard)
Blocks: 1412183
Keywords: regression
Comment on attachment 8924894 [details] Bug 1414213. P1 - H264::NumSPS() should return 0 if aExtraData is empty. https://reviewboard.mozilla.org/r/196168/#review201346 ::: media/libstagefright/binding/H264.cpp:970 (Diff revision 1) > - if (!aExtraData) { > + if (!aExtraData || aExtraData->IsEmpty()) { > return 0; > } > > BufferReader reader(aExtraData); > const uint8_t* ptr = reader.Read(5); bug 1412183 introduced the problem by attempting to perform a read even when the previous operator set ptr to nullptr. Please change this so that immediately after Read(5) it will return if ptr is nullptr.
Attachment #8924894 - Flags: review?(jyavenard) → review+
Attachment #8925413 - Flags: review?(jyavenard)
Comment on attachment 8925413 [details] Bug 1414213. P2 - don't continue reading if reader.Read(5) failed. https://reviewboard.mozilla.org/r/196538/#review201750
Attachment #8925413 - Flags: review?(jyavenard) → review+
Thanks!
Pushed by jwwang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fe1d819e6cca P1 - H264::NumSPS() should return 0 if aExtraData is empty. r=jya https://hg.mozilla.org/integration/autoland/rev/bbe8f6210383 P2 - don't continue reading if reader.Read(5) failed. r=jya
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: