Bug 1414213. P1 - H264::NumSPS() should return 0 if aExtraData is empty. r=jya

MozReview-Commit-ID: JTzEqYt9mQr

--HG--
extra : rebase_source : 660d93f8088ae3d01ba23c74ee6deef7a0cb34aa
extra : source : 9f971ae67cecbd4d040881b3ed0b1752b6a6e04d